--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinit Rathod</title>
-</head>
-<body>
-    <div><h1>Hello vinit</h1></div>
-</body>
+
+    <style>
+        h1{
+            color: tomato;
+            font-size: 74px;
+        }
+
+        #box{
+            background-color: chartreuse;
+            color: black;
+            font-size: 40px;
+            text-align: center;
+        }
+    </style>
+
+
+  </head>
+  <body>
+   
+    <div id="box">hello</div>
+    <div><h1>Hello vinit rathod</h1></div>
+  </body>
 </html>
