--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <style>
       h1 {
-        color: tomato;
+        color: olivedrab;
         font-size: 74px;
       }
 
       #box {
-        background-color: chartreuse;
+        background-color: greenyellow;
         color: black;
         font-size: 40px;
         text-align: center;
@@ -21,6 +21,10 @@
     </style>
   </head>
   <body>
+    <h1>registor form</h1>
+    <form>
+      <label>first name</label>type="text" 
+    </form>
     <div id="box">hello</div>
     <div><h1>Hello vinit rathod</h1></div>
   </body>
