--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
       }
     </style>
   </head>
-  <body>
-    <h1>registor form</h1>
-    <form>
-      <label>first name</label>type="text" 
-    </form>
-    <div id="box">hello</div>
-    <div><h1>Hello vinit rathod</h1></div>
+    <div style="color: rgb(180, 77, 29);">
+     <p> I'm <h2 style="color: blue;"><strong><em>vinit rathod</em></strong></h2> <hr>a student from svvv,indore</p>
+    <ul>My hobbies
+      <li>YOGA</li>
+      <li>cricket</li>
+    </ul>
+    <ol style="background-color: lightsteelblue;">hello 123
+      <li>hi i m doing coding rn</li>
+      <li>now im playing video games</li>
+      <li>123456987</li>
+    </ol>
+    <hr>
+    <hr>
+    <br>
+    <P>I'm vinit rathod a student from svvv,Indore</P>
+  </div>
   </body>
 </html>
