--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </style>
   </head>
     <div style="color: rgb(180, 77, 29);">
-     <p> I'm <h2 style="color: blue;"><strong><em>vinit rathod</em></strong></h2> <hr>a student from svvv,indore</p>
+     <p> I'm <h2 style="color: blue;"><strong><em>vinit rathod</em></strong></h2> a student from svvv,indore</p>
+     <hr>
     <ul>My hobbies
       <li>YOGA</li>
       <li>cricket</li>
@@ -36,5 +37,24 @@
     <br>
     <P>I'm vinit rathod a student from svvv,Indore</P>
   </div>
+  <H1>my data</H1>
+  <table border="1" style="font-size: large;">
+    <thead>
+      <tr>
+        <th>name</th>
+        <th>age</th>
+        <th>gender</th>
+        <th>occupation</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Vinit rathod</td>
+        <td>20</td>
+        <td>male</td>
+        <td>student</td>
+      </tr>
+    </tbody>
+  </table>
   </body>
 </html>
