--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    
     <title>Vinit Rathod</title>
 
     <style>
@@ -21,7 +23,7 @@
     </style>
   </head>
     <div style="color: rgb(180, 77, 29);">
-     <p> I'm <h2 style="color: blue;"><strong><em>vinit rathod</em></strong></h2> a student from svvv,indore</p>
+     <p> I'm <h2 style="color: blue;"><strong><em>vinit rathod</em></strong></h2> <h1>menu</h1>  <h1>indore</h1> a student from svvv,indore</p>
      <hr>
     <ul>My hobbies
       <li>YOGA</li>
